syntax = "proto3";
package chat;

option go_package = "github.com/thanh2k4/Chat-app/proto/gen";

import "google/protobuf/timestamp.proto";

service ChatService {
  rpc SendMessage ( ChatMessage) returns ( ChatMessage);
  rpc CreateChat ( ChatCreateRequest ) returns ( Chat );
  rpc GetChat ( ChatGetRequest ) returns ( Chat );
  rpc GetChatsByUser ( ChatGetByUserRequest ) returns ( ChatGetByUserResponse );
  rpc GetMessagesByChat ( ChatGetRequest ) returns ( ChatGetMessagesResponse );
}

message ChatGetMessagesResponse {
  repeated ChatMessage messages = 1;
}

message ChatGetByUserRequest {
  string user_id = 1;
}

message ChatGetByUserResponse {
  repeated Chat chats = 1;
}

message ChatGetRequest {
  string id = 1;
}

message Chat {
  string id = 1;
  string type = 2;
  string name = 3;
  string avatar = 4;
  string creator_id = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message ChatCreateRequest {
  string type = 1;
  string name = 2;
  string avatar = 3;
  string creator_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message ChatMessage {
  string id = 1;
  string chat_id = 2;
  string sender_id = 3;
  string content = 4;
  string type = 5;
  string media_url = 6;
  string status = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}